--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -38,8 +38,8 @@
     <string name="deletion_helper_clear_dialog_title" msgid="9169670752655850967">"స్థలాన్ని ఖాళీ చేయండి"</string>
     <string name="deletion_helper_clear_dialog_message" msgid="5196490478187120700">"<xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> కంటెంట్ మీ పరికరం నుండి తీసివేయబడుతుంది"</string>
     <string name="deletion_helper_clear_dialog_remove" msgid="863575755467985516">"స్థలాన్ని ఖాళీ చేయండి"</string>
-    <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"నిల్వను స్వయంచాలకంగా నిర్వహించాలా?"</string>
-    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"ఇప్పుడు <xliff:g id="USED">%1$s</xliff:g> స్థలం ఖాళీగా ఉంది. మీ పరికరం నుండి బ్యాకప్ చేసిన కంటెంట్‌ను తీసివేయడం ద్వారా స్వయంచాలకంగా స్థలాన్ని ఖాళీ చేయడానికి నిల్వ నిర్వాహికిని అనుమతించాలా?"</string>
+    <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"నిల్వను ఆటోమేటిక్‌గా నిర్వహించాలా?"</string>
+    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"ఇప్పుడు <xliff:g id="USED">%1$s</xliff:g> స్థలం ఖాళీగా ఉంది. మీ పరికరం నుండి బ్యాకప్ చేసిన కంటెంట్‌ను తీసివేయడం ద్వారా ఆటోమేటిక్‌గా స్థలాన్ని ఖాళీ చేయడానికి నిల్వ నిర్వాహికిని అనుమతించాలా?"</string>
     <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"వద్దు, ధన్యవాదాలు"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"ఆన్ చేయి"</string>
     <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"అరుదుగా ఉపయోగించే యాప్‌లు"</string>
@@ -48,10 +48,10 @@
     <string name="deletion_helper_automatic_title" msgid="4610119358490679299">"ఆటోమేటిక్"</string>
     <string name="deletion_helper_manual_title" msgid="3905192395039688529">"మాన్యువల్"</string>
     <string name="deletion_helper_preference_title" msgid="803484286872745892">"ఇప్పుడు స్థలాన్ని ఖాళీ చేయి"</string>
-    <string name="automatic_storage_manager_service_label" msgid="648592272375278978">"స్వయంచాలక నిల్వ నిర్వహణ సేవ"</string>
+    <string name="automatic_storage_manager_service_label" msgid="648592272375278978">"ఆటోమేటిక్‌ నిల్వ నిర్వహణ సేవ"</string>
     <string name="automatic_storage_manager_notification_title" product="default" msgid="8480483265300964701">"మీ ఫోన్‌లో తక్కువ నిల్వ స్థలం ఉంది"</string>
     <string name="automatic_storage_manager_notification_title" product="tablet" msgid="3150907918531844467">"మీ టాబ్లెట్‌లో ఖాళీ స్థలం తక్కువగా ఉంది"</string>
-    <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"మీ ఫోన్ నిల్వ మళ్లీ నిండిపోతున్నప్పుడు పాత ఫోటోలు మరియు వీడియోలను స్వయంచాలకంగా తీసివేయడం ద్వారా స్థలాన్ని ఖాళీ చేయడానికి నిల్వ నిర్వాహికిని అనుమతించండి."</string>
+    <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"మీ ఫోన్ నిల్వ మళ్లీ నిండిపోతున్నప్పుడు పాత ఫోటోలు మరియు వీడియోలను ఆటోమేటిక్‌గా తీసివేయడం ద్వారా స్థలాన్ని ఖాళీ చేయడానికి నిల్వ నిర్వాహికిని అనుమతించండి."</string>
     <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"వద్దు, ధన్యవాదాలు"</string>
     <string name="automatic_storage_manager_activate_button" msgid="6257070263061898041">"ఆన్ చేయి"</string>
     <string name="deletion_helper_photos_loading_title" msgid="2768067991066779772">"బ్యాకప్ చేసిన ఫోటోలు &amp; వీడియోలు"</string>
