--- a/res/values-or/strings.xml
+++ b/res/values-or/strings.xml
@@ -17,7 +17,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name" msgid="963247385700831716">"ଷ୍ଟୋରେଜ୍‌ ମ୍ୟାନେଜର୍"</string>
-    <string name="cancel" msgid="7021218262867558825">"ବାତିଲ୍ କରନ୍ତୁ"</string>
+    <string name="cancel" msgid="7021218262867558825">"ବାତିଲ କରନ୍ତୁ"</string>
     <string name="storage_menu_free" msgid="1878247401436882778">"ଜାଗା ଖାଲି କରନ୍ତୁ"</string>
     <string name="deletion_helper_title" msgid="3526170325226275927">"ଆଇଟମ୍‌‌ କାଢ଼ନ୍ତୁ"</string>
     <string name="deletion_helper_app_summary" msgid="4904590040180275237">"<xliff:g id="DAYS">%1$d</xliff:g> ଦିନ ପୂର୍ବେ"</string>
