--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -39,7 +39,7 @@
     <string name="deletion_helper_clear_dialog_message" msgid="5196490478187120700">"<xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> ከይዘት ከእርስዎ መሣሪያ ይወገዳል"</string>
     <string name="deletion_helper_clear_dialog_remove" msgid="863575755467985516">"ቦታ ያስለቅቁ"</string>
     <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"ማከማቻ በራስ-ሰር ይተዳደር?"</string>
-    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> አሁን ነጻ ነው። የማከማቻ አስተዳዳሪ ከእርስዎ መሣሪያ ላይ በምትኬ የተቀመጠ ይዘትን በራስ-ሰር በማስወገድ ቦታ እንዲያስለቅቅ ይፈቀድለት?"</string>
+    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> አሁን ነፃ ነው። የማከማቻ አስተዳዳሪ ከእርስዎ መሣሪያ ላይ በምትኬ የተቀመጠ ይዘትን በራስ-ሰር በማስወገድ ቦታ እንዲያስለቅቅ ይፈቀድለት?"</string>
     <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"አይ፣ አመሰግናለሁ"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"አብራ"</string>
     <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"በብዛት ጥቅም ላይ የማይውሉ መተግበሪያዎች"</string>
