--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -39,7 +39,7 @@
     <string name="deletion_helper_clear_dialog_message" msgid="5196490478187120700">"Um total de <xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> de conteúdo será removido do seu dispositivo"</string>
     <string name="deletion_helper_clear_dialog_remove" msgid="863575755467985516">"Liberar espaço"</string>
     <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"Gerenciar armazenamento automaticamente?"</string>
-    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> grátis a partir de agora. Permitir que o gerenciador de armazenamento libere espaço automaticamente, removendo conteúdo do seu dispositivo salvo em backup?"</string>
+    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> livre. Permitir que o gerenciador de armazenamento libere espaço automaticamente, removendo conteúdo do seu dispositivo salvo em backup?"</string>
     <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"Não"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"Ativar"</string>
     <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"Apps pouco utilizados"</string>
