--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -16,8 +16,8 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" msgid="963247385700831716">"నిల్వ నిర్వాహికి"</string>
-    <string name="cancel" msgid="7021218262867558825">"రద్దు చేయి"</string>
+    <string name="app_name" msgid="963247385700831716">"స్టోరేజ్‌ నిర్వాహికి"</string>
+    <string name="cancel" msgid="7021218262867558825">"రద్దు చేయండి"</string>
     <string name="storage_menu_free" msgid="1878247401436882778">"స్థలాన్ని ఖాళీ చేయి"</string>
     <string name="deletion_helper_title" msgid="3526170325226275927">"అంశాలను తీసివేయండి"</string>
     <string name="deletion_helper_app_summary" msgid="4904590040180275237">"<xliff:g id="DAYS">%1$d</xliff:g> రోజుల క్రితం"</string>
@@ -39,7 +39,7 @@
     <string name="deletion_helper_clear_dialog_message" msgid="5196490478187120700">"<xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> కంటెంట్ మీ పరికరం నుండి తీసివేయబడుతుంది"</string>
     <string name="deletion_helper_clear_dialog_remove" msgid="863575755467985516">"స్థలాన్ని ఖాళీ చేయండి"</string>
     <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"నిల్వను ఆటోమేటిక్‌గా నిర్వహించాలా?"</string>
-    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"ఇప్పుడు <xliff:g id="USED">%1$s</xliff:g> స్థలం ఖాళీగా ఉంది. మీ పరికరం నుండి బ్యాకప్ చేసిన కంటెంట్‌ను తీసివేయడం ద్వారా ఆటోమేటిక్‌గా స్థలాన్ని ఖాళీ చేయడానికి నిల్వ నిర్వాహికిని అనుమతించాలా?"</string>
+    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"ఇప్పుడు <xliff:g id="USED">%1$s</xliff:g> స్థలం ఖాళీగా ఉంది. మీ పరికరం నుండి బ్యాకప్ చేసిన కంటెంట్‌ను తీసివేయడం ద్వారా ఆటోమేటిక్‌గా స్థలాన్ని ఖాళీ చేయడానికి స్టోరేజ్‌ నిర్వాహికిని అనుమతించాలా?"</string>
     <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"వద్దు, ధన్యవాదాలు"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"ఆన్ చేయి"</string>
     <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"అరుదుగా ఉపయోగించే యాప్‌లు"</string>
@@ -48,8 +48,8 @@
     <string name="deletion_helper_automatic_title" msgid="4610119358490679299">"ఆటోమేటిక్"</string>
     <string name="deletion_helper_manual_title" msgid="3905192395039688529">"మాన్యువల్"</string>
     <string name="deletion_helper_preference_title" msgid="803484286872745892">"ఇప్పుడు స్థలాన్ని ఖాళీ చేయి"</string>
-    <string name="automatic_storage_manager_service_label" msgid="648592272375278978">"ఆటోమేటిక్‌ నిల్వ నిర్వహణ సేవ"</string>
-    <string name="automatic_storage_manager_notification_title" product="default" msgid="8480483265300964701">"మీ ఫోన్‌లో తక్కువ నిల్వ స్థలం ఉంది"</string>
+    <string name="automatic_storage_manager_service_label" msgid="648592272375278978">"ఆటోమేటిక్‌ స్టోరేజ్‌ నిర్వహణ సేవ"</string>
+    <string name="automatic_storage_manager_notification_title" product="default" msgid="8480483265300964701">"మీ ఫోన్‌లో తక్కువ స్టోరేజ్‌ స్థలం ఉంది"</string>
     <string name="automatic_storage_manager_notification_title" product="tablet" msgid="3150907918531844467">"మీ టాబ్లెట్‌లో ఖాళీ స్థలం తక్కువగా ఉంది"</string>
     <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"మీ ఫోన్ స్టోరేజ్ మళ్లీ నిండిపోతున్నప్పుడు పాత ఫోటోలు, వీడియోలను ఆటోమేటిక్‌గా తీసివేయడం ద్వారా స్పేస్‌ను ఖాళీ చేయడానికి స్టోరేజ్ మేనేజర్‌ను అనుమతించండి."</string>
     <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"వద్దు, ధన్యవాదాలు"</string>
@@ -59,7 +59,7 @@
     <string name="deletion_helper_no_threshold" msgid="6943179204098250444">"అన్ని అంశాల‌ను చూపండి"</string>
     <string name="deletion_helper_default_threshold" msgid="8410389370069021113">"ఇటీవల అంశాలను దాచండి"</string>
     <string name="deletion_helper_clear_dialog_message_first_time" msgid="686530413183529901">"<xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> కంటెంట్ మీ పరికరం నుండి తీసివేయబడుతుంది"</string>
-    <string name="automatic_storage_manager_activation_warning" msgid="7657017408180001078">"మీ నిల్వ ఇప్పుడు నిల్వ నిర్వాహికి ద్వారా నిర్వహించబడుతోంది"</string>
+    <string name="automatic_storage_manager_activation_warning" msgid="7657017408180001078">"మీ స్టోరేజ్‌ ఇప్పుడు స్టోరేజ్‌ నిర్వాహికి ద్వారా నిర్వహించబడుతోంది"</string>
     <string name="empty_state_title" msgid="4033285438176545309">"తీసివేయాల్సినవి ఏవీ లేవు"</string>
     <string name="empty_state_review_items_link" msgid="8411186441239304545">"ఇటీవలి అంశాలను రివ్యూ చేయండి"</string>
     <string name="empty_state_summary" msgid="8439893007424243790">"తీసివేయడానికి పాత ఫైళ్లు ఏవీ లేవు. స్పేస్‌ను ఖాళీ చేయాలంటే, ఇటీవలి ఫోటోలు, వీడియోలు అలాగే యాప్‌లను తీసివేయండి."</string>
