--- a/res/values-kn/strings.xml
+++ b/res/values-kn/strings.xml
@@ -40,7 +40,7 @@
     <string name="deletion_helper_clear_dialog_remove" msgid="863575755467985516">"ಸ್ಪೇಸ್ ಅನ್ನು ಮುಕ್ತಗೊಳಿಸಿ"</string>
     <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಸಂಗ್ರಹಣೆಯನ್ನು ನಿರ್ವಹಿಸುವುದೇ?"</string>
     <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> ಇದೀಗ ಮುಕ್ತವಾಗಿದೆ. ನಿಮ್ಮ ಸಾಧನದಿಂದ ಬ್ಯಾಕಪ್ ಮಾಡಲಾದ ವಿಷಯವನ್ನು ತೆಗೆದುಹಾಕುವ ಮೂಲಕ ಸ್ವಯಂಚಾಲಿತವಾಗಿ ಸ್ಥಳಾವಕಾಶವನ್ನು ಮುಕ್ತಗೊಳಿಸಲು ಸಂಗ್ರಹಣೆ ನಿರ್ವಾಹಕಕ್ಕೆ ಅವಕಾಶ ನೀಡುವುದೇ?"</string>
-    <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"ಧನ್ಯವಾದಗಳು"</string>
+    <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"ಬೇಡ"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"ಆನ್‌ ಮಾಡಿ"</string>
     <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"ಅಪರೂಪವಾಗಿ ಬಳಸುವ ಅಪ್ಲಿಕೇಶನ್‌ಗಳು"</string>
     <!-- no translation found for deletion_helper_apps_group_summary (360315517252452356) -->
@@ -52,7 +52,7 @@
     <string name="automatic_storage_manager_notification_title" product="default" msgid="8480483265300964701">"ನಿಮ್ಮ ಫೋನ್ ಸ್ಥಳಾವಕಾಶ ಕಡಿಮೆ ಇದೆ"</string>
     <string name="automatic_storage_manager_notification_title" product="tablet" msgid="3150907918531844467">"ನಿಮ್ಮ ಟ್ಯಾಬ್ಲೆಟ್ ಸ್ಥಳಾವಕಾಶ ಕಡಿಮೆ ಇದೆ"</string>
     <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"ನಿಮ್ಮ ಫೋನ್ ಮತ್ತೊಮ್ಮೆ ಭರ್ತಿಯಾಗಲು ಪ್ರಾರಂಭವಾದಾಗ ನಿಮ್ಮ ಫೋನ್‌ನಿಂದ ಹಳೆಯ ಫೋಟೋಗಳು ಮತ್ತು ವೀಡಿಯೋಗಳನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ತೆಗೆದುಹಾಕುವ ಮೂಲಕ ಸ್ಥಳಾವಕಾಶವನ್ನು ಮುಕ್ತಗೊಳಿಸಲು ಸಂಗ್ರಹಣೆ ನಿರ್ವಾಹಕಕ್ಕೆ ಅವಕಾಶ ನೀಡಿ."</string>
-    <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"ಧನ್ಯವಾದಗಳು"</string>
+    <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"ಬೇಡ"</string>
     <string name="automatic_storage_manager_activate_button" msgid="6257070263061898041">"ಆನ್‌ ಮಾಡಿ"</string>
     <string name="deletion_helper_photos_loading_title" msgid="2768067991066779772">"ಬ್ಯಾಕ್‌ಅಪ್ ಮಾಡಿರುವ ಫೋಟೋಗಳು ಹಾಗೂ ವೀಡಿಯೊಗಳು"</string>
     <string name="deletion_helper_photos_loading_summary" msgid="8203033249458245854">"ಐಟಂಗಳನ್ನು ಹುಡುಕಲಾಗುತ್ತಿದೆ…"</string>
