--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -16,7 +16,7 @@
 
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name" msgid="963247385700831716">"Lagerstyring"</string>
+    <string name="app_name" msgid="963247385700831716">"Lageradministrator"</string>
     <string name="cancel" msgid="7021218262867558825">"Annuller"</string>
     <string name="storage_menu_free" msgid="1878247401436882778">"Frigør plads"</string>
     <string name="deletion_helper_title" msgid="3526170325226275927">"Fjern elementer"</string>
@@ -39,7 +39,7 @@
     <string name="deletion_helper_clear_dialog_message" msgid="5196490478187120700">"<xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> indhold fjernes fra din enhed"</string>
     <string name="deletion_helper_clear_dialog_remove" msgid="863575755467985516">"Frigør plads"</string>
     <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"Vil du administrere lagerplads automatisk?"</string>
-    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"Der er nu frigivet <xliff:g id="USED">%1$s</xliff:g>. Vil du automatisk lade Lagerstyring frigøre plads ved at fjerne sikkerhedskopieret indhold fra dine enheder?"</string>
+    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"Der er nu frigivet <xliff:g id="USED">%1$s</xliff:g>. Vil du automatisk lade Lageradministrator frigøre plads ved at fjerne sikkerhedskopieret indhold fra dine enheder?"</string>
     <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"Nej tak"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"Aktivér"</string>
     <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"Sjældent brugte apps"</string>
@@ -51,7 +51,7 @@
     <string name="automatic_storage_manager_service_label" msgid="648592272375278978">"Tjeneste til automatisk lagerstyring"</string>
     <string name="automatic_storage_manager_notification_title" product="default" msgid="8480483265300964701">"Der er kun lidt plads på din telefon"</string>
     <string name="automatic_storage_manager_notification_title" product="tablet" msgid="3150907918531844467">"Din tablet er ved at løbe tør for plads"</string>
-    <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"Lad Lagerstyring frigøre plads ved automatisk at fjerne gamle billeder og videoer, når din telefon begynder at blive fuld igen."</string>
+    <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"Lad Lageradministrator frigøre plads ved automatisk at fjerne gamle billeder og videoer, når din telefon begynder at blive fuld igen."</string>
     <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"Nej tak"</string>
     <string name="automatic_storage_manager_activate_button" msgid="6257070263061898041">"Aktivér"</string>
     <string name="deletion_helper_photos_loading_title" msgid="2768067991066779772">"Sikkerhedskopierede billeder og videoer"</string>
@@ -59,7 +59,7 @@
     <string name="deletion_helper_no_threshold" msgid="6943179204098250444">"Vis alle elementer"</string>
     <string name="deletion_helper_default_threshold" msgid="8410389370069021113">"Skjul seneste elementer"</string>
     <string name="deletion_helper_clear_dialog_message_first_time" msgid="686530413183529901">"<xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> indhold fjernes fra din enhed"</string>
-    <string name="automatic_storage_manager_activation_warning" msgid="7657017408180001078">"Din lagerplads administreres nu af lageradministratoren"</string>
+    <string name="automatic_storage_manager_activation_warning" msgid="7657017408180001078">"Din lagerplads administreres nu af Lageradministrator"</string>
     <string name="empty_state_title" msgid="4033285438176545309">"Ikke noget at fjerne"</string>
     <string name="empty_state_review_items_link" msgid="8411186441239304545">"Gennemse seneste elementer"</string>
     <string name="empty_state_summary" msgid="8439893007424243790">"Der er ikke nogen ældre filer at fjerne. Fjern nyere billeder, videoer og apps for at frigøre plads."</string>
