--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -18,7 +18,7 @@
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name" msgid="963247385700831716">"Διαχείριση αποθηκευτικού χώρου"</string>
     <string name="cancel" msgid="7021218262867558825">"Ακύρωση"</string>
-    <string name="storage_menu_free" msgid="1878247401436882778">"Απελευθερώστε χώρο"</string>
+    <string name="storage_menu_free" msgid="1878247401436882778">"Αποδεσμεύστε χώρο"</string>
     <string name="deletion_helper_title" msgid="3526170325226275927">"Κατάργηση στοιχείων"</string>
     <string name="deletion_helper_app_summary" msgid="4904590040180275237">"<xliff:g id="DAYS">%1$d</xliff:g> μέρες πριν"</string>
     <!-- no translation found for deletion_helper_app_summary_item_size (3770886184921427886) -->
@@ -35,11 +35,11 @@
     <skip />
     <!-- no translation found for deletion_helper_downloads_summary_empty (3988054032360371887) -->
     <skip />
-    <string name="deletion_helper_clear_dialog_title" msgid="9169670752655850967">"Απελευθερώστε χώρο"</string>
+    <string name="deletion_helper_clear_dialog_title" msgid="9169670752655850967">"Αποδεσμεύστε χώρο"</string>
     <string name="deletion_helper_clear_dialog_message" msgid="5196490478187120700">"<xliff:g id="CLEARABLE_BYTES">%1$s</xliff:g> του περιεχομένου θα καταργηθεί από τη συσκευή σας"</string>
-    <string name="deletion_helper_clear_dialog_remove" msgid="863575755467985516">"Απελευθερώστε χώρο"</string>
+    <string name="deletion_helper_clear_dialog_remove" msgid="863575755467985516">"Αποδεσμεύστε χώρο"</string>
     <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"Ενεργοποίηση αυτόματης διαχείρισης αποθηκευτικού χώρου;"</string>
-    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> είναι πλέον διαθέσιμα. Να επιτρέπεται στη Διαχείριση αποθηκευτικού χώρου να απελευθερώνει αυτόματα χώρο καταργώντας από τη συσκευή σας περιεχόμενο για το οποίο έχουν δημιουργηθεί αντίγραφα ασφαλείας;"</string>
+    <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> είναι πλέον διαθέσιμα. Να επιτρέπεται στη Διαχείριση αποθηκευτικού χώρου να αποδεσμεύσει αυτόματα χώρο καταργώντας από τη συσκευή σας περιεχόμενο για το οποίο έχουν δημιουργηθεί αντίγραφα ασφαλείας;"</string>
     <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"Όχι, ευχαριστώ"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"Ενεργοποίηση"</string>
     <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"Εφαρμογές που δεν χρησιμοποιούνται συχνά"</string>
@@ -47,11 +47,11 @@
     <skip />
     <string name="deletion_helper_automatic_title" msgid="4610119358490679299">"Αυτόματες"</string>
     <string name="deletion_helper_manual_title" msgid="3905192395039688529">"Μη αυτόματες"</string>
-    <string name="deletion_helper_preference_title" msgid="803484286872745892">"Απελευθερώστε χώρο τώρα"</string>
+    <string name="deletion_helper_preference_title" msgid="803484286872745892">"Αποδεσμεύστε χώρο τώρα"</string>
     <string name="automatic_storage_manager_service_label" msgid="648592272375278978">"Υπηρεσία αυτόματης διαχείρ. αποθ. χώρου"</string>
     <string name="automatic_storage_manager_notification_title" product="default" msgid="8480483265300964701">"Απομένει λίγος χώρος στο τηλέφωνό σας"</string>
     <string name="automatic_storage_manager_notification_title" product="tablet" msgid="3150907918531844467">"Απομένει λίγος χώρος στο tablet"</string>
-    <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"Να επιτρέπεται στη Διαχείριση αποθηκευτικού χώρου να απελευθερώνει χώρο καταργώντας αυτόματα παλιές φωτογραφίες και βίντεο όταν το τηλέφωνό σας αρχίσει να γεμίζει ξανά."</string>
+    <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"Να επιτρέπεται στη Διαχείριση αποθηκευτικού χώρου να αποδεσμεύσει χώρο καταργώντας αυτόματα παλιές φωτογραφίες και βίντεο όταν το τηλέφωνό σας αρχίσει να γεμίζει ξανά."</string>
     <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"Όχι, ευχαριστώ"</string>
     <string name="automatic_storage_manager_activate_button" msgid="6257070263061898041">"Ενεργοποίηση"</string>
     <string name="deletion_helper_photos_loading_title" msgid="2768067991066779772">"Αντίγραφα ασφαλείας φωτογραφιών και βίντεο"</string>
