--- a/res/values-pt-rPT/strings.xml
+++ b/res/values-pt-rPT/strings.xml
@@ -40,7 +40,7 @@
     <string name="deletion_helper_clear_dialog_remove" msgid="863575755467985516">"Libertar espaço"</string>
     <string name="deletion_helper_upsell_title" msgid="8512037674466762017">"Quer gerir o armazenamento automaticamente?"</string>
     <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> agora disponíveis. Permitir que o Gestor de armazenamento liberte espaço automaticamente ao remover conteúdos de cópias de segurança do dispositivo?"</string>
-    <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"Não, obrigado"</string>
+    <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"Não"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"Ativar"</string>
     <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"Apps utilizadas raramente"</string>
     <!-- no translation found for deletion_helper_apps_group_summary (360315517252452356) -->
@@ -52,7 +52,7 @@
     <string name="automatic_storage_manager_notification_title" product="default" msgid="8480483265300964701">"O telemóvel tem pouco espaço livre"</string>
     <string name="automatic_storage_manager_notification_title" product="tablet" msgid="3150907918531844467">"O seu tablet tem pouco espaço livre"</string>
     <string name="automatic_storage_manager_notification_summary" msgid="2267399886362245822">"Permitir que o Gestor de armazenamento liberte espaço automaticamente através da remoção de fotos e de vídeos antigos quando o telemóvel começar a ficar novamente cheio."</string>
-    <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"Não, obrigado"</string>
+    <string name="automatic_storage_manager_cancel_button" msgid="1826365037494962803">"Não"</string>
     <string name="automatic_storage_manager_activate_button" msgid="6257070263061898041">"Ativar"</string>
     <string name="deletion_helper_photos_loading_title" msgid="2768067991066779772">"Fotos e vídeos com cópia de segurança"</string>
     <string name="deletion_helper_photos_loading_summary" msgid="8203033249458245854">"A localizar itens…"</string>
