--- a/res/values-fr-rCA/strings.xml
+++ b/res/values-fr-rCA/strings.xml
@@ -42,7 +42,7 @@
     <string name="deletion_helper_upsell_summary" msgid="2301597713694474407">"<xliff:g id="USED">%1$s</xliff:g> d\'espace est maintenant disponible. Autoriser le gestionnaire de stockage à libérer de l\'espace automatiquement en supprimant le contenu sauvegardé sur votre appareil?"</string>
     <string name="deletion_helper_upsell_cancel" msgid="7084167642850053889">"Non merci"</string>
     <string name="deletion_helper_upsell_activate" msgid="7157360257760895976">"Activer"</string>
-    <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"Applications rarement utilisées"</string>
+    <string name="deletion_helper_apps_group_title" msgid="2578309121350341258">"Applis rarement utilisées"</string>
     <!-- no translation found for deletion_helper_apps_group_summary (360315517252452356) -->
     <skip />
     <string name="deletion_helper_automatic_title" msgid="4610119358490679299">"Automatique"</string>
@@ -62,6 +62,6 @@
     <string name="automatic_storage_manager_activation_warning" msgid="7657017408180001078">"Votre espace de stockage est maintenant géré par le gestionnaire de stockage"</string>
     <string name="empty_state_title" msgid="4033285438176545309">"Rien à supprimer"</string>
     <string name="empty_state_review_items_link" msgid="8411186441239304545">"Passer en revue les éléments récents"</string>
-    <string name="empty_state_summary" msgid="8439893007424243790">"Il n\'y a aucun ancien fichier à supprimer. Pour faire de la place, supprimez des photos, des vidéos et des applications récentes."</string>
+    <string name="empty_state_summary" msgid="8439893007424243790">"Il n\'y a aucun ancien fichier à supprimer. Pour faire de la place, supprimez des photos, des vidéos et des applis récentes."</string>
     <string name="app_requesting_space" msgid="857425181289960167">"<xliff:g id="APP">%1$s</xliff:g> a besoin de <xliff:g id="CLEARABLE_BYTES">%2$s</xliff:g> d\'espace"</string>
 </resources>
